# rejviz

./: .coveragerc  .gitignore  MANIFEST.in  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
rejviz/: libvirt_nets.py  nic.py  nic_mappings.py  tmp.py  utils.py
rejviz/cmd/: builder.py  install.py
rejviz/templates/: fetch_nic.guestfish.j2  ifcfg-eth.j2
rejviz/tests/: test_libvirt_nets.py  test_nic.py  test_nic_mappings.py  test_tmp.py  test_utils.py  utils.py
rejviz/tests/cmd/: test_builder.py  test_install.py
