[metadata]
name = rejviz
summary = Additional features on top of libguestfs-tools
description-file =
    README.rst
license = Apache License, Version 2.0
author = Jiri Stransky
author-email = jistr@redhat.com
home-page = https://github.com/jistr/rejviz
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    rejviz

[entry_points]
console_scripts =
    rejviz-builder = rejviz.cmd.builder:main

# [build_sphinx]
# source-dir = doc/source
# build-dir = doc/build
# all_files = 1

# [upload_sphinx]
# upload-dir = doc/build/html
